--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,5 +10,6 @@
     "haven't_made_choice": "Looks like you haven't made your choice yet",
     "shopNow": "Shop Now",
     "lang" : "lang",
-    "checkout": "Checkout"
+    "checkout": "Checkout",
+    "more": "More Items"
 }
