--- a/src/i18n/ka.json
+++ b/src/i18n/ka.json
@@ -10,5 +10,6 @@
     "haven't_made_choice": "არჩევანი ჯერ არ გაგიკეთებიათ",
     "shopNow": "შოპინგის გაგრძელება",
     "lang": "ენა",
-    "checkout": "გადახდა"
+    "checkout": "გადახდა",
+    "more": "მეტი"
 }
